@startuml
'https://plantuml.com/class-diagram
' ======= layout =========
skinparam backgroundColor #fcf9ea
skinparam titleBorderRoundCorner 15
skinparam titleFontSize 30
skinparam classAttributeIconSize 0
skinparam titleFontName Arial Black
skinparam titleFontColor #f8a978
skinparam roundcorner 20
skinparam stereotypeCBackgroundColor ffc5a1
skinparam class {

ArrowColor ffc5a1
BorderColor White
BackgroundColor badfdb
}


' ======= title =========
center header


<font color=Black size=15><b>Built by WeByte ©</font>
endheader
title <b>US10 - Domain Model\n
class Company{
 - designation
}

class Parameter{
- code
- name
- description
}
class ParameterCategory{
- code
- name
}

class Administrator

Company "1" -- "*" Parameter : capable of analysing >
Company "1" -- "*" Administrator : knows >

Parameter "*" -- "1" ParameterCategory : presented under >
Company  "1" -- "*" ParameterCategory : adopts >
Parameter "1" -- "1" Administrator : created by >
@enduml